# gestor-dinheiro2.0

./: autenticacao.py  banco_dados.py  movimentos.py  principal.py  pyproject.toml  requirements.txt  utilidades.py
