[project]
name = "gestao-dinheiro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "greenlet==3.5.3",
    "joblib==1.5.3",
    "narwhals==2.23.0",
    "numpy==2.5.1",
    "pandas==3.0.3",
    "python-dateutil==2.9.0.post0",
    "scikit-learn==1.9.0",
    "scipy==1.18.0",
    "six==1.17.0",
    "sqlalchemy==2.0.51",
    "threadpoolctl==3.6.0",
    "typing-extensions==4.16.0",
    "uv==0.11.29",
]
